--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@types/datatables.net": "^1.10.18",
     "@types/jquery": "^3.3.35",
+    "aws-sdk": "^2.754.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^3.4.1",
     "cache": "^2.1.0",
