--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,5 @@
 {
   "projects": {
-    "default": "marriagebandits",
-    "staging": "marriagebandits",
-    "production": "marriagebandits"
+    "default": "marriagebandits"
   }
 }
