--- a/package.json
+++ b/package.json
@@ -53,9 +53,10 @@
     "datatables.net-rowreorder": "^1.2.6",
     "datatables.net-rowreorder-bs": "^1.2.6",
     "error-ex": "^1.3.2",
+    "eslint": "^7.26.0",
     "express": "^4.17.1",
     "firebase": "^7.14.0",
-    "firebase-functions": "^3.3.0",
+    "firebase-functions": "^3.14.1",
     "firebase-functions-helper": "^0.7.5",
     "firebase-tools": "^7.16.1",
     "gulp-print": "^5.0.0",
